--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,22 @@ bower_components/
 .grunt/
 src/vendor/
 dist/
+
+# Scala
+#########
+## sbt specific
+.cache/
+.history/
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+## Scala-IDE specific
+.scala_dependencies
+.worksheet
+scalastyle-config.xml
+.idea/
