--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,11 @@ scala: 2.11.7
 jdk:
 - oraclejdk8
 
+before_install:
+  - . $HOME/.nvm/nvm.sh
+  - nvm install stable
+  - nvm use stable
+
 script: 
   - sbt ++$TRAVIS_SCALA_VERSION clean coverage test assembly
   
