Update persistence configuration

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -5,8 +5,15 @@ akka {
 
   persistence {
     journal {
+      plugin = "akka.persistence.journal.leveldb"
+      # DO NOT USE THIS IN PRODUCTION
       leveldb.native = off
       leveldb-shared.store.native = off
+      dir = "target/journal"
+    }
+    snapshot-store {
+      plugin = "akka.persistence.snapshot-store.local"
+      local.dir = "target/snapshots"
     }
   }
 
