--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -2,19 +2,13 @@ akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = "DEBUG"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
-
-  persistence {
-    journal {
-      plugin = "akka.persistence.journal.leveldb"
-      # DO NOT USE THIS IN PRODUCTION
-      leveldb.native = off
-      leveldb-shared.store.native = off
-      dir = "target/journal"
-    }
-    snapshot-store {
-      plugin = "akka.persistence.snapshot-store.local"
-      local.dir = "target/snapshots"
-    }
-  }
-
 }
+
+akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
+# DON'T USE THIS IN PRODUCTION
+akka.persistence.journal.leveldb.native = off
+akka.persistence.journal.leveldb.dir = "backend/target/journal"
+
+
+akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+akka.persistence.snapshot-store.local.dir = "backend/target/snapshots"
