Modify API to store raw data

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -7,8 +7,8 @@ akka {
 akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
 # DON'T USE THIS IN PRODUCTION
 akka.persistence.journal.leveldb.native = off
-akka.persistence.journal.leveldb.dir = "backend/target/journal"
+akka.persistence.journal.leveldb.dir = "target/journal"
 
 
 akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-akka.persistence.snapshot-store.local.dir = "backend/target/snapshots"
+akka.persistence.snapshot-store.local.dir = "target/snapshots"
