--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -2,6 +2,8 @@ akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = "DEBUG"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  log-dead-letters = off
+  log-dead-letters-during-shutdown = off
 }
 
 akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
