--- a/frontend/src/main/resources/application.conf
+++ b/frontend/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "DEBUG"
+  loglevel = "INFO"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   http.parsing.max-content-length = 1G
 }
