--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -13,3 +13,11 @@ hmda {
     port = ${?HMDA_HTTP_PORT}
   }
 }
+
+akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
+# DON'T USE THIS IN PRODUCTION
+akka.persistence.journal.leveldb.native = off
+akka.persistence.journal.leveldb.dir = "target/journal"
+
+akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+akka.persistence.snapshot-store.local.dir = "target/snapshots"
