Disable logging for unit tests

--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "DEBUG"
-  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  loglevel = "INFO"
+  #logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   http.parsing.max-content-length = 1G
 }
 
