--- a/api/src/test/resources/application.conf
+++ b/api/src/test/resources/application.conf
@@ -1,10 +1,7 @@
 akka {
-  loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "DEBUG"
-  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
-  http.parsing.max-content-length = 1G
-  log-dead-letters = off
-  log-dead-letters-during-shutdown = off
+  loggers = ["akka.event.Logging$DefaultLogger"]
+  stdout-loglevel = "OFF"
+  loglevel = "OFF"
 }
 
 hmda {
