Allow updating income limit with environment variable
The values in Quality edits commonly change from year to year. By adding
Q014's income limit to the application's configuration, we allow
updating the value in the future without updating the code.

Also, refactored application.conf for readability.

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -1,2 +1,10 @@
-hmda.validation.quality.Q005.loan.amount=1203
-hmda.validation.quality.Q005.loan.amount=${?Q005_LOAN_AMOUNT}
+hmda.validation.quality {
+  Q005 {
+    loan.amount=1203
+    loan.amount=${?Q005_LOAN_AMOUNT}
+  }
+  Q014 {
+    applicant.max_income=3000
+    applicant.max_income=${?Q014_MAX_INCOME}
+  }
+}
