--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -7,4 +7,8 @@ hmda.validation.quality {
     applicant.max_income=3000
     applicant.max_income=${?Q014_MAX_INCOME}
   }
+  Q024 {
+    min_income_for_high_loan=9
+    min_income_for_high_loan=${?Q024_MIN_INCOME}
+  }
 }
