Follow variable naming conventions
CamelCase for scala variables, kabob-case for configurations

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -4,11 +4,11 @@ hmda.validation.quality {
     loan.amount=${?Q005_LOAN_AMOUNT}
   }
   Q014 {
-    applicant.max_income=3000
-    applicant.max_income=${?Q014_MAX_INCOME}
+    applicant.max-income=3000
+    applicant.max-income=${?Q014_MAX_INCOME}
   }
   Q024 {
-    min_income_for_high_loan=9
-    min_income_for_high_loan=${?Q024_MIN_INCOME}
+    min-income-for-high-loan=9
+    min-income-for-high-loan=${?Q024_MIN_INCOME}
   }
 }
