--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -11,4 +11,12 @@ hmda.validation.quality {
     min-income-for-high-loan=9
     min-income-for-high-loan=${?Q024_MIN_INCOME}
   }
+  Q025 {
+    loan.amount=10
+    loan.amount=${?Q025_LOAN_AMOUNT}
+  }
+  Q038 {
+    loan.amount=100
+    loan.amount=${?Q035_LOAN_AMOUNT}
+  }
 }
