added hardcoded values to config file

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -11,4 +11,12 @@ hmda.validation.quality {
     min-income-for-high-loan=9
     min-income-for-high-loan=${?Q024_MIN_INCOME}
   }
+  Q044 {
+    rateSpread=6.5
+    rateSpread=${?Q044_RATE_SPREAD}
+  }
+  Q045 {
+    rateSpread=8.5
+    rateSpread=${?Q045_RATE_SPREAD}
+  }
 }
