updated to reflect environment naming conventions

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -3,13 +3,13 @@ hmda.validation.quality {
     loan.amount=1000
     loan.amount=${?Q001_LOAN_AMOUNT}
     incomeMultiplier=5
-    incomeMultiplier=${?Q001_incomeMultiplier}
+    incomeMultiplier=${?Q001_INCOME_MULTIPLIER}
   }
   Q002 {
     loan.amount=2000
     loan.amount=${?Q002_LOAN_AMOUNT}
     applicant.income=200
-    applicant.income=${?Q002_Income}
+    applicant.income=${?Q002_INCOME}
   }
   Q003 {
     loan.amount=626
