--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -11,4 +11,8 @@ hmda.validation.quality {
     min-income-for-high-loan=9
     min-income-for-high-loan=${?Q024_MIN_INCOME}
   }
+  Q066 {
+    rate-spread=13.0
+    rate-spread=${?Q066_RATE_SPREAD}
+  }
 }
