--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -25,6 +25,10 @@ hmda.validation.quality {
     loan.amount=250
     loan.amount=${?Q037_LOAN_AMOUNT}
   }
+  Q040 {
+    rate-spread = 10.0
+    rate-spread = ${?Q066_RATE_SPREAD}
+  }
   Q066 {
     rate-spread = 13.0
     rate-spread = ${?Q066_RATE_SPREAD}
