--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -13,6 +13,8 @@ hmda {
     port = 8080
     port = ${?HMDA_HTTP_PORT}
   }
+  activity-year = 2017
+  activity-year = ${?HMDA_ACTIVITY_YEAR}
 }
 
 akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
