--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -12,6 +12,8 @@ hmda {
     host = ${?HMDA_HTTP_HOST}
     port = 8080
     port = ${?HMDA_HTTP_PORT}
+    timeout = 5
+    timeout = ${?HMDA_HTTP_TIMEOUT}
   }
   isDemo = true
   isDemo = ${?HMDA_IS_DEMO}
