Log warning when attempting to create already-existing filing
Test that warning gets logged. Requires adding TestEventListener as test
logger.

--- a/persistence/src/test/resources/application.conf
+++ b/persistence/src/test/resources/application.conf
@@ -6,3 +6,4 @@ akka {
 akka.persistence.journal.plugin = "akka.persistence.journal.inmem"
 akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
 akka.persistence.snapshot-store.local.dir = "target/snapshots"
+akka.loggers = [akka.testkit.TestEventListener]
