increase eventFilter timeout to 5s from 3s

--- a/api/src/test/resources/application.conf
+++ b/api/src/test/resources/application.conf
@@ -2,6 +2,7 @@ akka {
   loggers = ["akka.event.Logging$DefaultLogger"]
   stdout-loglevel = "OFF"
   loglevel = "OFF"
+  testKit.filter-leeway = 5s
 }
 
 hmda {
