--- a/persistence/src/test/resources/application.conf
+++ b/persistence/src/test/resources/application.conf
@@ -3,7 +3,6 @@ akka {
   actor.warn-about-java-serializer-usage = off
 }
 
-akka.persistence.journal.plugin = "akka.persistence.journal.inmem"
-akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-akka.persistence.snapshot-store.local.dir = "target/snapshots"
+akka.persistence.journal.plugin = "inmemory-journal"
+akka.persistence.snapshot-store.plugin = "inmemory-snapshot-store"
 akka.loggers = [akka.testkit.TestEventListener]
