--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -5,6 +5,7 @@ akka {
 
 
 akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
+akka.persistence.query.journal.id = "akka.persistence.query.journal.leveldb"
 # DON'T USE THIS IN PRODUCTION
 akka.persistence.journal.leveldb.native = off
 akka.persistence.journal.leveldb.dir = "target/journal"
