add volume in docker-compose.yml so backend can be changed without rebuilding

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '2'
 services:
   api:
     build: .
+    volumes:
+    - ./target/scala-2.11/hmda.jar:/opt/hmda.jar
   ui:
     build: ../hmda-platform-ui
     ports:
