Update event processor to use supervisor when calling actors

--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -12,3 +12,7 @@ akka.persistence.journal.leveldb.dir = "target/journal"
 
 akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
 akka.persistence.snapshot-store.local.dir = "target/snapshots"
+
+hmda {
+  actor-lookup-timeout = 5
+}
