Make persistent actor timeout configurable

--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -15,4 +15,5 @@ akka.persistence.snapshot-store.local.dir = "target/snapshots"
 
 hmda {
   actor-lookup-timeout = 5
+  persistent-actor-timeout = 60
 }
