Add protobuf serializer for HMDA raw file

--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -1,6 +1,15 @@
 akka {
   loglevel = "INFO"
-  actor.warn-about-java-serializer-usage = off
+  actor {
+    warn-about-java-serializer-usage = off
+    serializers {
+      hmdaRawFile = "hmda.persistence.processing.serialization.HmdaRawFileProtobufSerializer"
+    }
+
+    serialization-bindings {
+      "hmda.persistence.processing.HmdaRawFile$LineAdded" = hmdaRawFile
+    }
+  }
 }
 
 
