--- a/persistence/src/test/resources/application.conf
+++ b/persistence/src/test/resources/application.conf
@@ -1,6 +1,16 @@
 akka {
   log-dead-letters = off
-  actor.warn-about-java-serializer-usage = off
+  actor {
+    warn-about-java-serializer-usage = on
+    serializers {
+      hmdaRawFile = "hmda.persistence.processing.serialization.HmdaRawFileProtobufSerializer"
+    }
+
+    serialization-bindings {
+      "hmda.persistence.processing.HmdaRawFile$LineAdded" = hmdaRawFile
+    }
+
+  }
 }
 
 akka.persistence.journal.plugin = "inmemory-journal"
