--- a/persistence/src/test/resources/application.conf
+++ b/persistence/src/test/resources/application.conf
@@ -4,10 +4,15 @@ akka {
     warn-about-java-serializer-usage = on
     serializers {
       hmdaRawFile = "hmda.persistence.processing.serialization.HmdaRawFileProtobufSerializer"
+      hmdaParserFile = "hmda.persistence.processing.serialization.HmdaFileParserProtobufSerializer"
     }
 
     serialization-bindings {
       "hmda.persistence.processing.HmdaRawFile$LineAdded" = hmdaRawFile
+      "hmda.persistence.processing.HmdaFileParser$TsParsed" = hmdaParserFile
+      "hmda.persistence.processing.HmdaFileParser$TsParsedErrors" = hmdaParserFile
+      "hmda.persistence.processing.HmdaFileParser$LarParsed" = hmdaParserFile
+      "hmda.persistence.processing.HmdaFileParser$LarParsedErrors" = hmdaParserFile
     }
 
   }
