Hide passing specs in scalaTest output
We only care about failing tests.
Reference for scalaTest configuration flags:
  http://www.scalatest.org/user_guide/using_scalatest_with_sbt

Also use test logger for all logging during tests

--- a/api/src/test/resources/application.conf
+++ b/api/src/test/resources/application.conf
@@ -1,5 +1,5 @@
 akka {
-  loggers = ["akka.event.Logging$DefaultLogger"]
+  loggers = [akka.testkit.TestEventListener]
   stdout-loglevel = "OFF"
   loglevel = "OFF"
   testKit.filter-leeway = 10s
