Add filing serializer

--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -3,11 +3,14 @@ akka {
   actor {
     warn-about-java-serializer-usage = off
     serializers {
+      filing = "hmda.persistence.institutions.serialization.FilingPersistenceProtobufSerializer"
       hmdaRawFile = "hmda.persistence.processing.serialization.HmdaRawFileProtobufSerializer"
       hmdaFileParser = "hmda.persistence.processing.serialization.HmdaFileParserProtobufSerializer"
     }
 
     serialization-bindings {
+      "hmda.persistence.institutions.FilingPersistence$FilingCreated" = filing
+      "hmda.persistence.institutions.FilingPersistence$FilingStatusUpdated" = filing
       "hmda.persistence.processing.HmdaRawFile$LineAdded" = hmdaRawFile
       "hmda.persistence.processing.HmdaFileParser$TsParsed" = hmdaFileParser
       "hmda.persistence.processing.HmdaFileParser$TsParsedErrors" = hmdaFileParser
