--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -3,14 +3,20 @@ akka {
   actor {
     warn-about-java-serializer-usage = off
     serializers {
+      institution = "hmda.persistence.institutions.serialization.InstitutionPersistenceProtobufSerializer"
       filing = "hmda.persistence.institutions.serialization.FilingPersistenceProtobufSerializer"
+      submission = "hmda.persistence.institutions.serialization.SubmissionPersistenceProtobufSerializer"
       hmdaRawFile = "hmda.persistence.processing.serialization.HmdaRawFileProtobufSerializer"
       hmdaFileParser = "hmda.persistence.processing.serialization.HmdaFileParserProtobufSerializer"
     }
 
     serialization-bindings {
+      "hmda.persistence.institutions.InstitutionPersistence$InstitutionCreated" = institution
+      "hmda.persistence.institutions.InstitutionPersistence$InstitutionModified" = institution
       "hmda.persistence.institutions.FilingPersistence$FilingCreated" = filing
       "hmda.persistence.institutions.FilingPersistence$FilingStatusUpdated" = filing
+      "hmda.persistence.institutions.SubmissionPersistence$SubmissionCreated" = submission
+      "hmda.persistence.institutions.SubmissionPersistence$SubmissionStatusUpdated" = submission
       "hmda.persistence.processing.HmdaRawFile$LineAdded" = hmdaRawFile
       "hmda.persistence.processing.HmdaFileParser$TsParsed" = hmdaFileParser
       "hmda.persistence.processing.HmdaFileParser$TsParsedErrors" = hmdaFileParser
