--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 akka {
   loglevel = "INFO"
   actor {
-    warn-about-java-serializer-usage = off
+    warn-about-java-serializer-usage = on
     serializers {
       institution = "hmda.persistence.institutions.serialization.InstitutionPersistenceProtobufSerializer"
       filing = "hmda.persistence.institutions.serialization.FilingPersistenceProtobufSerializer"
