adjust test filter leeway

--- a/persistence/src/test/resources/application.conf
+++ b/persistence/src/test/resources/application.conf
@@ -1,6 +1,7 @@
 akka {
   log-dead-letters = off
   actor.warn-about-java-serializer-usage = off
+  testKit.filter-leeway = 10s
 }
 
 akka.persistence.journal.plugin = "inmemory-journal"
