Make macro validation multiplier configurable

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -70,3 +70,12 @@ hmda.validation.quality {
     rate-spread = ${?Q066_RATE_SPREAD}
   }
 }
+
+hmda.validation.macro {
+  Q007 {
+    numOfLarsMultiplier = 0.15
+  }
+  Q008 {
+    numOfLarsMultiplier = 0.30
+  }
+}
