Create institution endpoint

--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -14,7 +14,7 @@ hmda {
     host = "0.0.0.0"
     host = ${?HMDA_HTTP_HOST}
     adminHost = "0.0.0.0"
-    host = ${?HMDA_HTTP_ADMIN_HOST}
+    adminHost = ${?HMDA_HTTP_ADMIN_HOST}
     port = 8080
     port = ${?HMDA_HTTP_PORT}
     adminPort = 8081
