--- a/api/src/test/resources/application.conf
+++ b/api/src/test/resources/application.conf
@@ -9,8 +9,14 @@ hmda {
   http {
     host = "0.0.0.0"
     host = ${?HMDA_HTTP_HOST}
+    adminHost = "0.0.0.0"
+    adminHost = ${?HMDA_HTTP_ADMIN_HOST}
     port = 8080
     port = ${?HMDA_HTTP_PORT}
+    adminPort = 8081
+    adminPort = ${?HMDA_HTTP_ADMIN_PORT}
+    timeout = 5
+    timeout = ${?HMDA_HTTP_TIMEOUT}
   }
 }
 
