refactor http institution queries

--- a/api/src/test/resources/application.conf
+++ b/api/src/test/resources/application.conf
@@ -20,6 +20,6 @@ hmda {
   }
 }
 
-akka.persistence.journal.plugin = "akka.persistence.journal.inmem"
-akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-akka.persistence.snapshot-store.local.dir = "target/snapshots"
+akka.persistence.journal.plugin = "inmemory-journal"
+akka.persistence.query.journal.id = "inmemory-read-journal"
+akka.persistence.snapshot-store.plugin = "inmemory-snapshot-store"
