Update api test config

--- a/api/src/test/resources/application.conf
+++ b/api/src/test/resources/application.conf
@@ -3,9 +3,14 @@ akka {
   stdout-loglevel = "OFF"
   loglevel = "OFF"
   testKit.filter-leeway = 10s
+  http.parsing.max-content-length = 1G
+  http.server.default-host-header = "cfpb.gov"
 }
 
 hmda {
+  actor {
+    timeout = 5
+  }
   http {
     host = "0.0.0.0"
     host = ${?HMDA_HTTP_HOST}
