Several refactorings; adds institutions sql table and query

--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -17,3 +17,10 @@ hmda {
   actor-lookup-timeout = 5
   persistent-actor-timeout = 60
 }
+
+h2mem1 = {
+  url = "jdbc:h2:mem:hmda"
+  driver = org.h2.Driver
+  connectionPool = disabled // disabled for in memory database
+  keepAliveConnection = true // set to false when using connection pool
+}
