--- a/query/src/test/resources/application.conf
+++ b/query/src/test/resources/application.conf
@@ -2,3 +2,10 @@ akka.persistence.journal.plugin = "inmemory-journal"
 akka.persistence.query.journal.id = "inmemory-read-journal"
 akka.persistence.snapshot-store.plugin = "inmemory-snapshot-store"
 akka.test.filter-leeway = "10s"
+
+h2mem1 = {
+  url = "jdbc:h2:mem:hmda"
+  driver = org.h2.Driver
+  connectionPool = disabled // disabled for in memory database
+  keepAliveConnection = true // set to false when using connection pool
+}
