Implement cake pattern for institutions dao

--- a/query/src/test/resources/application.conf
+++ b/query/src/test/resources/application.conf
@@ -3,7 +3,7 @@ akka.persistence.query.journal.id = "inmemory-read-journal"
 akka.persistence.snapshot-store.plugin = "inmemory-snapshot-store"
 akka.test.filter-leeway = "10s"
 
-h2mem1 = {
+h2mem = {
   url = "jdbc:h2:mem:hmda"
   driver = org.h2.Driver
   connectionPool = disabled // disabled for in memory database
