--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -18,7 +18,7 @@ hmda {
   persistent-actor-timeout = 60
 }
 
-h2mem1 = {
+h2mem = {
   url = "jdbc:h2:mem:hmda"
   driver = org.h2.Driver
   connectionPool = disabled // disabled for in memory database
