Remove logging from tests

--- a/query/src/test/resources/application.conf
+++ b/query/src/test/resources/application.conf
@@ -1,7 +1,12 @@
-akka.persistence.journal.plugin = "inmemory-journal"
-akka.persistence.query.journal.id = "inmemory-read-journal"
-akka.persistence.snapshot-store.plugin = "inmemory-snapshot-store"
-akka.test.filter-leeway = "10s"
+akka {
+  stdout-loglevel = "OFF"
+  loglevel = "OFF"
+  log-dead-letters = off
+  log-dead-letters-during-shutdown = off
+  persistence.journal.plugin = "inmemory-journal"
+  persistence.query.journal.id =  "inmemory-read-journal"
+  persistence.snapshot-store.plugin = "inmemory-snapshot-store"
+}
 
 h2mem = {
   url = "jdbc:h2:mem:hmda"
