Make snapshot counter configurable

--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -16,6 +16,7 @@ akka.persistence.snapshot-store.local.dir = "target/snapshots"
 hmda {
   actor-lookup-timeout = 5
   persistent-actor-timeout = 60
+  journal.snapshot.counter = 100
 }
 
 h2mem = {
