--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -81,4 +81,10 @@ hmda.validation.macro {
   Q047 {
     numOfLarsMultiplier = 0.10
   }
+  Q057 {
+    numOfLoanApplications = 50
+  }
+  Q058 {
+    numOfPreapprovalsRequested = 1000
+  }
 }
