--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -81,4 +81,10 @@ hmda.validation.macro {
   Q047 {
     numOfLarsMultiplier = 0.10
   }
+  Q055 {
+    numOfLarsMultiplier = 0.05
+  }
+  Q061 {
+    numOfLarsMultiplier = 0.01
+  }
 }
