--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -81,4 +81,10 @@ hmda.validation.macro {
   Q047 {
     numOfLarsMultiplier = 0.10
   }
+  Q080 {
+    numOfLarsMultiplier = 0.5
+  }
+  Q081 {
+    numOfLarsMultiplier = 0.5
+  }
 }
