--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -87,4 +87,10 @@ hmda.validation.macro {
   Q081 {
     numOfLarsMultiplier = 0.5
   }
+  Q082 {
+    numOfLarsMultiplier = 0.5
+  }
+  Q083 {
+    numOfLarsMultiplier = 0.2
+  }
 }
