--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -81,4 +81,8 @@ hmda.validation.macro {
   Q047 {
     numOfLarsMultiplier = 0.10
   }
+  Q056 {
+    numOfConventionalHomePurchaseLoans = 50
+    deniedConventionalHomePurchaseLoansMultiplier = 0.7
+  }
 }
