--- a/persistence/src/test/resources/application.conf
+++ b/persistence/src/test/resources/application.conf
@@ -1,8 +1,11 @@
 akka {
+  stdout-loglevel = "OFF"
+  loglevel = "OFF"
   log-dead-letters = off
+  log-dead-letters-during-shutdown = off
   actor.warn-about-java-serializer-usage = off
 }
 
 akka.persistence.journal.plugin = "inmemory-journal"
 akka.persistence.snapshot-store.plugin = "inmemory-snapshot-store"
-akka.loggers = [akka.testkit.TestEventListener]
+
