--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -78,6 +78,9 @@ hmda.validation.macro {
   Q008 {
     numOfLarsMultiplier = 0.30
   }
+  Q010 {
+    numOfLarsMultiplier = 0.2
+  }
   Q047 {
     numOfLarsMultiplier = 0.10
   }
