--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -78,6 +78,10 @@ hmda.validation.macro {
   Q008 {
     numOfLarsMultiplier = 0.30
   }
+  Q015 {
+    numOfLarsMultiplier = 0.1
+    dollarAmountOfLarsMultiplier = 0.1
+  }
   Q047 {
     numOfLarsMultiplier = 0.10
   }
