--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -82,6 +82,10 @@ hmda.validation.macro {
     numOfLarsMultiplier = 0.1
     dollarAmountOfLarsMultiplier = 0.1
   }
+  Q031 {
+    numOfLars = 2000
+    numOfMultifamily = 200
+  }
   Q047 {
     numOfLarsMultiplier = 0.10
   }
