add Q023 and modify macroPasses to pass for Q023

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -81,6 +81,9 @@ hmda.validation.macro {
   Q010 {
     numOfLarsMultiplier = 0.2
   }
+  Q023 {
+    numOfLarsMultiplier = 0.3
+  }
   Q047 {
     numOfLarsMultiplier = 0.10
   }
