--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -81,6 +81,10 @@ hmda.validation.macro {
   Q010 {
     numOfLarsMultiplier = 0.2
   }
+  Q016 {
+    incomeCap = 10
+    numOfLarsMultiplier = 0.2
+  }
   Q047 {
     numOfLarsMultiplier = 0.10
   }
