--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       # Must use the external address since it is used both in frontend and backend.
       INSTITUTION_SEARCH_URI: https://192.168.99.100:9443
       INSTITUTION_SEARCH_VALIDATE_SSL: "OFF"
+      REDIRECT_URIS: '[ "http://192.168.99.100/oidc-callback", "http://192.168.99.100/silent_renew.html" ]'
     volumes:
       - '../hmda-platform-auth/keycloak/themes/hmda:/opt/jboss/keycloak/themes/hmda'
     #  - '../hmda-platform-auth/keycloak/import:/opt/jboss/import'
