--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -94,6 +94,12 @@ hmda.validation.macro {
   Q047 {
     numOfLarsMultiplier = 0.10
   }
+  Q053 {
+    numOfLarsMultiplier = 0.01
+  }
+  Q054 {
+    numOfLarsMultiplier = 0.01
+  }
   Q055 {
     numOfLarsMultiplier = 0.05
   }
