--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -72,6 +72,10 @@ hmda.validation.quality {
 }
 
 hmda.validation.macro {
+  Q006 {
+    numOfLarsMultiplier = 0.95
+    numOfOriginatedHomePurchaseLoans = 25
+  }
   Q007 {
     numOfLarsMultiplier = 0.15
   }
@@ -93,6 +97,9 @@ hmda.validation.macro {
   }
   Q047 {
     numOfLarsMultiplier = 0.10
+  }
+  Q048 {
+    numOfLarsMultiplier = 0.05
   }
   Q055 {
     numOfLarsMultiplier = 0.05
