--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -110,6 +110,14 @@ hmda.validation.macro {
   Q061 {
     numOfLarsMultiplier = 0.01
   }
+  Q073 {
+    numOfLoanApplications = 250
+    numOfLarsMultiplier = 0.20
+  }
+  Q074 {
+    numOfLoanApplications = 250
+    numOfLarsMultiplier = 0.20
+  }
   Q080 {
     numOfLarsMultiplier = 0.5
   }
