Refactor institutions dao => repository; update tests

--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -19,9 +19,13 @@ hmda {
   journal.snapshot.counter = 100
 }
 
-h2mem = {
-  url = "jdbc:h2:mem:hmda"
-  driver = org.h2.Driver
-  connectionPool = disabled // disabled for in memory database
-  keepAliveConnection = true // set to false when using connection pool
+db {
+  driver = "slick.driver.H2Driver$"
+
+  db {
+    url = "jdbc:h2:mem:test1;DB_CLOSE_DELAY=-1"
+    driver=org.h2.Driver
+    connectionPool = disabled
+    keepAliveConnection = true
+  }
 }
