Add LAR Macro edit Q062

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -124,6 +124,9 @@ hmda.validation.macro {
   Q061 {
     numOfLarsMultiplier = 0.01
   }
+  Q062 {
+    numOfLarsMultiplier = 0.01
+  }
   Q073 {
     numOfLoanApplications = 250
     numOfLarsMultiplier = 0.20
