Add LAR Macro edit Q063

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -127,6 +127,9 @@ hmda.validation.macro {
   Q062 {
     numOfLarsMultiplier = 0.01
   }
+  Q063 {
+    numOfLarsMultiplier = 0.01
+  }
   Q073 {
     numOfLoanApplications = 250
     numOfLarsMultiplier = 0.20
