Add Macro edit Q065

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -137,6 +137,9 @@ hmda.validation.macro {
   Q063 {
     numOfLarsMultiplier = 0.01
   }
+  Q065 {
+    hoepaLoanLimit = 200
+  }
   Q073 {
     numOfLoanApplications = 250
     numOfLarsMultiplier = 0.20
