--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -20,12 +20,14 @@ hmda {
 }
 
 db {
-  driver = "slick.driver.H2Driver$"
+  driver = "slick.driver.PostgresDriver$"
 
   db {
-    url = "jdbc:h2:mem:test1;DB_CLOSE_DELAY=-1"
-    driver=org.h2.Driver
+    # "jdbc:postgresql://localhost/hmda?user=postgres&password=postgres"
+    url = ${JDBC_URL}
+    driver = org.postgresql.Driver
+    maxThreads = 5
     connectionPool = disabled
-    keepAliveConnection = true
   }
 }
+
