--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -23,11 +23,10 @@ db {
   driver = "slick.driver.PostgresDriver$"
 
   db {
-    # "jdbc:postgresql://localhost/hmda?user=postgres&password=postgres"
+    # url = "jdbc:postgresql://localhost/hmda?user=postgres&password=postgres"
     url = ${JDBC_URL}
     driver = org.postgresql.Driver
     maxThreads = 5
-    connectionPool = disabled
   }
 }
 
