--- a/api/src/test/resources/application.conf
+++ b/api/src/test/resources/application.conf
@@ -27,3 +27,14 @@ hmda {
 akka.persistence.journal.plugin = "inmemory-journal"
 akka.persistence.query.journal.id = "inmemory-read-journal"
 akka.persistence.snapshot-store.plugin = "inmemory-snapshot-store"
+
+db {
+  driver = "slick.driver.H2Driver$"
+
+  db {
+    url = "jdbc:h2:mem:test1;DB_CLOSE_DELAY=-1"
+    driver=org.h2.Driver
+    connectionPool = disabled
+    keepAliveConnection = true
+  }
+}
