--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -15,10 +15,14 @@ hmda {
     host = ${?HMDA_HTTP_HOST}
     adminHost = "0.0.0.0"
     adminHost = ${?HMDA_HTTP_ADMIN_HOST}
+    publicHost = "0.0.0.0"
+    publicHost = ${?HMDA_HTTP_PUBLIC_HOST}
     port = 8080
     port = ${?HMDA_HTTP_PORT}
     adminPort = 8081
     adminPort = ${?HMDA_HTTP_ADMIN_PORT}
+    publicPort = 8082
+    publicPort = ${?HMDA_HTTP_PUBLIC_PORT}
     timeout = 10
     timeout = ${?HMDA_HTTP_TIMEOUT}
   }
