add modified lar database streaming

--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -17,6 +17,7 @@ hmda {
   actor-lookup-timeout = 5
   persistent-actor-timeout = 60
   journal.snapshot.counter = 100
+  query.fetch.size = 32
 }
 
 db {
