--- a/panel/src/main/resources/application.conf
+++ b/panel/src/main/resources/application.conf
@@ -8,10 +8,10 @@ akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
 akka.persistence.query.journal.id = "akka.persistence.query.journal.leveldb"
 # DON'T USE THIS IN PRODUCTION
 akka.persistence.journal.leveldb.native = off
-akka.persistence.journal.leveldb.dir = "target/journal"
+akka.persistence.journal.leveldb.dir = "api/target/journal"
 
 akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-akka.persistence.snapshot-store.local.dir = "target/snapshots"
+akka.persistence.snapshot-store.local.dir = "api/target/snapshots"
 
 hmda {
   actor-lookup-timeout = 5
