Increase timeout for probe.expectMsg tests

--- a/persistence/src/test/resources/application.conf
+++ b/persistence/src/test/resources/application.conf
@@ -9,3 +9,5 @@ akka {
 akka.persistence.journal.plugin = "inmemory-journal"
 akka.persistence.snapshot-store.plugin = "inmemory-snapshot-store"
 
+akka.test.single-expect-default = 10s
+
