--- a/query/src/test/resources/application.conf
+++ b/query/src/test/resources/application.conf
@@ -8,6 +8,8 @@ akka {
   persistence.snapshot-store.plugin = "inmemory-snapshot-store"
 }
 
+akka.test.single-expect-default = 10s
+
 db {
   driver = "slick.driver.H2Driver$"
 
