Change configuration parameter names

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -89,8 +89,10 @@ hmda.validation.macro {
     numOfLarsMultiplier = 0.2
   }
   Q011 {
-    loan.previous.fixed=500
-    loan.actual.multiplier=0.2
+    lar {
+      size = 500
+      multiplier = 0.2
+    }
   }
   Q015 {
     numOfLarsMultiplier = 0.1
