--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -89,10 +89,8 @@ hmda.validation.macro {
     numOfLarsMultiplier = 0.2
   }
   Q011 {
-    lar {
-      size = 500
-      multiplier = 0.2
-    }
+    numOfTotalLars = 500
+    numOfLarsMultiplier = 0.2
   }
   Q015 {
     numOfLarsMultiplier = 0.1
