Add db test config

--- a/persistence/src/test/resources/application.conf
+++ b/persistence/src/test/resources/application.conf
@@ -11,3 +11,14 @@ akka.persistence.snapshot-store.plugin = "inmemory-snapshot-store"
 
 akka.test.single-expect-default = 10s
 
+db {
+  driver = "slick.driver.H2Driver$"
+
+  db {
+    url = "jdbc:h2:mem:test1;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=-1"
+    driver=org.h2.Driver
+    connectionPool = disabled
+    keepAliveConnection = true
+  }
+}
+
