group config variable

--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -17,7 +17,10 @@ hmda {
   actor-lookup-timeout = 5
   persistent-actor-timeout = 60
   journal.snapshot.counter = 100
-  query.fetch.size = 32
+  query {
+    fetch.size = 32
+    group.size = 1000
+  }
 }
 
 db {
