--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -16,4 +16,5 @@ akka.persistence.snapshot-store.local.dir = "target/snapshots"
 hmda {
   actor-lookup-timeout = 5
   persistent-actor-timeout = 60
+  actor-flow-parallelism = 4
 }
