--- a/api/src/test/resources/application.conf
+++ b/api/src/test/resources/application.conf
@@ -32,9 +32,8 @@ db {
   driver = "slick.driver.H2Driver$"
 
   db {
-    url = "jdbc:h2:mem:test1;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=-1"
+    url = "jdbc:h2:mem:test1;DATABASE_TO_UPPER=false;"
     driver=org.h2.Driver
-    connectionPool = disabled
-    keepAliveConnection = true
+    numThreads = 2
   }
 }
