update test timeout and submission status

--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -4,6 +4,7 @@ akka {
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   http.parsing.max-content-length = 1G
   http.server.default-host-header = "cfpb.gov"
+  test.timefactor=30.0
 }
 
 hmda {
