try increasing thread count

--- a/api/src/test/resources/application.conf
+++ b/api/src/test/resources/application.conf
@@ -36,6 +36,6 @@ db {
     driver=org.h2.Driver
     connectionPool = disabled
     keepAliveConnection = true
-    queueSize=2000
+    numThreads=10
   }
 }
