Move persistence to cassandra

--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -1,17 +1,28 @@
 akka {
   loglevel = "INFO"
   actor.warn-about-java-serializer-usage = off
+  persistence {
+    journal.plugin = "cassandra-journal"
+    snapshot-store.plugin = "cassandra-snapshot-store"
+    query {
+      journal.id = "cassandra-query-journal"
+    }
+  }
 }
 
+cassandra-journal {
+  contact-points = ["192.168.99.100"]
+  keyspace = "akkajournal"
+  table = "journal"
+  keyspace-autocreate = true
+}
 
-akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
-akka.persistence.query.journal.id = "akka.persistence.query.journal.leveldb"
-# DON'T USE THIS IN PRODUCTION
-akka.persistence.journal.leveldb.native = off
-akka.persistence.journal.leveldb.dir = "target/journal"
-
-akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-akka.persistence.snapshot-store.local.dir = "target/snapshots"
+cassandra-snapshot-store {
+  contact-points = ["192.168.99.100"]
+  keyspace = "akkasnapshot"
+  table = "snapshots"
+  keyspace-autocreate = true
+}
 
 hmda {
   actor-lookup-timeout = 5
