--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -12,14 +12,14 @@ akka {
 
 cassandra-journal {
   contact-points = ["192.168.99.100"]
-  keyspace = "akkajournal"
+  keyspace = "hmdajournal"
   table = "journal"
   keyspace-autocreate = true
 }
 
 cassandra-snapshot-store {
   contact-points = ["192.168.99.100"]
-  keyspace = "akkasnapshot"
+  keyspace = "hmdasnapshot"
   table = "snapshots"
   keyspace-autocreate = true
 }
