--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -11,14 +11,16 @@ akka {
 }
 
 cassandra-journal {
-  contact-points = ["192.168.99.100"]
+  contact-points = ["127.0.0.1"]
+  contact-points = [${?CASSANDRA_CLUSTER_HOSTS}]
   keyspace = "hmdajournal"
   table = "journal"
   keyspace-autocreate = true
 }
 
 cassandra-snapshot-store {
-  contact-points = ["192.168.99.100"]
+  contact-points = ["127.0.0.1"]
+  contact-points = [${?CASSANDRA_CLUSTER_HOSTS}]
   keyspace = "hmdasnapshot"
   table = "snapshots"
   keyspace-autocreate = true
