--- a/persistence/src/test/resources/application.conf
+++ b/persistence/src/test/resources/application.conf
@@ -8,6 +8,7 @@ akka {
 
 akka.persistence.journal.plugin = "inmemory-journal"
 akka.persistence.snapshot-store.plugin = "inmemory-snapshot-store"
+akka.persistence.query.journal.id = "inmemory-read-journal"
 
 akka.test.single-expect-default = 10s
 
