--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -13,17 +13,28 @@ akka {
 cassandra-journal {
   contact-points = ["127.0.0.1"]
   contact-points = [${?CASSANDRA_CLUSTER_HOSTS}]
-  keyspace = "hmdajournal"
+  keyspace = "hmda_journal"
   table = "journal"
   keyspace-autocreate = true
+  keyspace-autocreate-retries = 5
+  connect-retries = 10
+  connect-retry-delay = 5s
 }
 
 cassandra-snapshot-store {
   contact-points = ["127.0.0.1"]
   contact-points = [${?CASSANDRA_CLUSTER_HOSTS}]
-  keyspace = "hmdasnapshot"
-  table = "snapshots"
+  keyspace = "hmda_snapshot"
+  table = "snapshot"
   keyspace-autocreate = true
+  keyspace-autocreate-retries = 5
+  connect-retries = 10
+  connect-retry-delay = 5s
+}
+
+cassandra-query-journal {
+  refresh-interval = 5s
+  refresh-interval = ${?QUERY_JOURNAL_REFRESH_INTERVAL}
 }
 
 hmda {
