Use local leveldb for persistence when isDemo=true

--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -40,4 +40,6 @@ cassandra-query-journal {
 hmda {
   actor-lookup-timeout = 5
   persistent-actor-timeout = 60
+  isDemo = true
+  isDemo = ${HMDA_IS_DEMO}
 }
