--- a/api/src/test/resources/application.conf
+++ b/api/src/test/resources/application.conf
@@ -1,6 +1,6 @@
 akka {
-  stdout-loglevel = "OFF"
-  loglevel = "OFF"
+  stdout-loglevel = "DEBUG"
+  loglevel = "DEBUG"
   testKit.filter-leeway = 10s
   http.parsing.max-content-length = 1G
   http.server.default-host-header = "cfpb.gov"
