--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -10,14 +10,9 @@ akka {
   }
 }
 
-akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
-akka.persistence.query.journal.id = "akka.persistence.query.journal.leveldb"
-# DON'T USE THIS IN PRODUCTION
-akka.persistence.journal.leveldb.native = off
-akka.persistence.journal.leveldb.dir = "target/journal"
-
-akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-akka.persistence.snapshot-store.local.dir = "target/snapshots"
+akka.persistence.journal.plugin = "inmemory-journal"
+akka.persistence.snapshot-store.plugin = "inmemory-snapshot-store"
+akka.persistence.query.journal.id = "inmemory-read-journal"
 
 hmda {
   actor-lookup-timeout = 5
