--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -88,6 +88,10 @@ hmda.validation.macro {
   Q010 {
     numOfLarsMultiplier = 0.2
   }
+  Q011 {
+    numOfTotalLars = 500
+    numOfLarsMultiplier = 0.2
+  }
   Q015 {
     numOfLarsMultiplier = 0.1
     dollarAmountOfLarsMultiplier = 0.1
