--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -1,3 +1,16 @@
+akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
+akka.persistence.query.journal.id = "akka.persistence.query.journal.leveldb"
+# DON'T USE THIS IN PRODUCTION
+akka.persistence.journal.leveldb.native = off
+akka.persistence.journal.leveldb.dir = "target/journal"
+
+akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+akka.persistence.snapshot-store.local.dir = "target/snapshots"
+
+hmda {
+  persistent-actor-timeout = 60
+}
+
 hmda.validation.quality {
   Q001 {
     loan.amount=1000
