Tweak logging configuration for tests

--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -7,6 +7,14 @@ akka.persistence.journal.leveldb.dir = "target/journal"
 akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
 akka.persistence.snapshot-store.local.dir = "target/snapshots"
 
+akka {
+  stdout-loglevel = "OFF"
+  loglevel = "OFF"
+  log-dead-letters = off
+  log-dead-letters-during-shutdown = off
+  actor.warn-about-java-serializer-usage = off
+}
+
 hmda {
   persistent-actor-timeout = 60
 }
