Add validation and submission lar stats

--- a/validation/src/test/resources/application.conf
+++ b/validation/src/test/resources/application.conf
@@ -4,16 +4,10 @@ akka {
   log-dead-letters = off
   log-dead-letters-during-shutdown = off
   actor.warn-about-java-serializer-usage = off
+  persistence.journal.plugin = "inmemory-journal"
+  persistence.query.journal.id =  "inmemory-read-journal"
+  persistence.snapshot-store.plugin = "inmemory-snapshot-store"
 }
-
-akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
-akka.persistence.query.journal.id = "akka.persistence.query.journal.leveldb"
-# DON'T USE THIS IN PRODUCTION
-akka.persistence.journal.leveldb.native = off
-akka.persistence.journal.leveldb.dir = "target/journal"
-
-akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-akka.persistence.snapshot-store.local.dir = "target/snapshots"
 
 hmda {
   persistent-actor-timeout = 60
