Stop HMDA_IS_DEMO from overriding isDemo when not set

--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -41,5 +41,5 @@ hmda {
   actor-lookup-timeout = 5
   persistent-actor-timeout = 60
   isDemo = true
-  isDemo = ${HMDA_IS_DEMO}
+  isDemo = ${?HMDA_IS_DEMO}
 }
