Increase expectMsg timeout

--- a/validation/src/test/resources/application.conf
+++ b/validation/src/test/resources/application.conf
@@ -4,8 +4,11 @@ akka {
   log-dead-letters = off
   log-dead-letters-during-shutdown = off
   actor.warn-about-java-serializer-usage = off
+
+  test.single-expect-default = 10s
+
+  persistence.journal.plugin = "inmemory-journal"
+  persistence.snapshot-store.plugin = "inmemory-snapshot-store"
+  persistence.query.journal.id = "inmemory-read-journal"
 }
 
-akka.persistence.journal.plugin = "inmemory-journal"
-akka.persistence.snapshot-store.plugin = "inmemory-snapshot-store"
-akka.persistence.query.journal.id = "inmemory-read-journal"
