--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -1,3 +1,10 @@
+hmda {
+  actor {
+    timeout = 5
+  }
+  persistent-actor-timeout = 60
+}
+
 hmda.validation.quality {
   Q001 {
     loan.amount=1000
@@ -86,6 +93,10 @@ hmda.validation.macro {
     numOfLarsMultiplier = 0.15
   }
   Q010 {
+    numOfLarsMultiplier = 0.2
+  }
+  Q011 {
+    numOfTotalLars = 500
     numOfLarsMultiplier = 0.2
   }
   Q015 {
