In specs, turn of demo mode so all features are enabled
This is necessary because S025 now only runs when demo mode is off.

--- a/persistence/src/test/resources/application.conf
+++ b/persistence/src/test/resources/application.conf
@@ -13,5 +13,5 @@ akka.persistence.query.journal.id = "inmemory-read-journal"
 akka.test.single-expect-default = 10s
 
 hmda {
-  isDemo = true
+  isDemo = false
 }
