Update journal configuration

--- a/api/src/test/resources/application.conf
+++ b/api/src/test/resources/application.conf
@@ -22,6 +22,7 @@ hmda {
     timeout = 5
     timeout = ${?HMDA_HTTP_TIMEOUT}
   }
+  isDemo = false
 }
 
 akka.persistence.journal.plugin = "inmemory-journal"
