--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -2,17 +2,27 @@ akka {
   loglevel = "INFO"
   actor.warn-about-java-serializer-usage = off
   persistence {
-    journal.plugin = "cassandra-journal"
-    snapshot-store.plugin = "cassandra-snapshot-store"
+    journal {
+      plugin = "akka.persistence.journal.leveldb"
+      leveldb {
+        dir = "target/journal"
+        native = false
+      }
+    }
+    snapshot-store {
+      plugin = "akka.persistence.snapshot-store.local"
+      local {
+        dir = "target/snapshots"
+      }
+    }
     query {
-      journal.id = "cassandra-query-journal"
+      journal {
+        id = "akka.persistence.query.journal.leveldb"
+      }
     }
   }
 }
 
-akka.persistence.journal.plugin = "inmemory-journal"
-akka.persistence.snapshot-store.plugin = "inmemory-snapshot-store"
-akka.persistence.query.journal.id = "inmemory-read-journal"
 
 hmda {
   actor-lookup-timeout = 5
