Add protobuf configuration when running in demo mode

--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -1,6 +1,15 @@
 akka {
   loglevel = "INFO"
-  actor.warn-about-java-serializer-usage = off
+  actor {
+    warn-about-java-serializer-usage = off
+    serializers {
+      institution = "hmda.persistence.institutions.serialization.InstitutionProtobufSerializer"
+    }
+    serialization-bindings {
+      "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionCreated" = institution
+      "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionModified" = institution
+    }
+  }
   persistence {
     journal {
       plugin = "akka.persistence.journal.leveldb"
