--- a/validation/src/main/resources/application.conf
+++ b/validation/src/main/resources/application.conf
@@ -158,6 +158,11 @@ hmda.validation.macro {
   Q065 {
     hoepaLoanLimit = 200
   }
+  Q071 {
+    currentYearThreshold = 30
+    currentYearProportion = 0.5
+    relativeProportion = 0.2
+  }
   Q073 {
     numOfLoanApplications = 250
     numOfLarsMultiplier = 0.20
